fix CSS issue on mobile view

--- a/src/components/contact/css/contact.module.css
+++ b/src/components/contact/css/contact.module.css
@@ -1,9 +1,9 @@
 .main {
   width: 50%;
-  min-width: 500px;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  padding-top: 13vh;
 }
 
 .content_name {
